testsuite/tests/th/TH_cvt_RecGadtNoCons.stderr
TH_cvt_RecGadtNoCons.hs:7:2: error: [GHC-18816]
    ‘RecGadtC’ must have at least one constructor name
    When splicing a TH declaration: data T where :: {} -> T

